Bug 450440 - scrolling with touchscreen does not work consistently
Summary: scrolling with touchscreen does not work consistently
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: history (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords: usability
: 482092 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-02-17 11:11 UTC by Patrick Silva
Modified: 2024-03-12 01:18 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screen recording (3.19 MB, video/x-matroska)
2022-02-17 11:11 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-02-17 11:11:26 UTC
Created attachment 146856 [details]
screen recording

SUMMARY
When I try to scroll the output with a touchscreen, frequently the output is selected instead of scrolled.
Please see the attached screen recording.

EXPECTED RESULT
scrolling with a touchscreen should work consistently

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.24.80
KDE Frameworks Version: 5.92.0
Qt Version: 5.15.3
Graphics Platform: Wayland
Comment 1 Nate Graham 2022-07-27 22:13:33 UTC
I think it selects if you press-and-hold for a moment, but that moment is too short and needs to be increased in duration to reduce accidental selections when you mean to scroll.
Comment 2 Patrick Silva 2023-11-17 03:56:21 UTC
Still an issue.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.81.0
KDE Frameworks Version: 5.245.0
Qt Version: 6.6.0
Graphics Platform: X11
Comment 3 Patrick Silva 2024-03-01 13:15:20 UTC
*** Bug 482092 has been marked as a duplicate of this bug. ***
Comment 4 Bug Janitor Service 2024-03-02 07:41:33 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/959
Comment 5 Kurt Hindenburg 2024-03-12 01:18:05 UTC
Git commit 45ccdd5a01b3277e03cb8584b0680d0186a2b6b1 by Kurt Hindenburg, on behalf of Willian Wang.
Committed on 12/03/2024 at 00:44.
Pushed by hindenburg into branch 'master'.

Fix touchscreen scroll inconsistency

Fix touchscreen scrolls that unintentionally selects text, introducing a
500ms delay to transition to text selection mode.

M  +9    -4    src/terminalDisplay/TerminalDisplay.cpp

https://invent.kde.org/utilities/konsole/-/commit/45ccdd5a01b3277e03cb8584b0680d0186a2b6b1