Fix touchscreen scroll inconsistency

Fix touchscreen scrolls that unintentionally selects text, introducing a
500ms delay to transition to text selection mode.

BUG: 450440